fix member card size on mobile

--- a/uwu.css
+++ b/uwu.css
@@ -1509,6 +1509,10 @@ footer p {
   .members-cards-rep {
     width: 250px;
   }
+
+  .members-cards{
+    height:250px;
+  }
   footer p {
     font-size: 1rem;
   }
